fix: main and aside gap, social icons (#63)

--- a/blocks/article-header/article-header.css
+++ b/blocks/article-header/article-header.css
@@ -33,7 +33,7 @@
     align-items: center;
     object-fit: cover;
     border-radius: 50%;
-    padding: 0 0 0 10px;
+    padding: 2.2%;
 }
 
 .article-shares .social-container a:hover {
@@ -48,7 +48,7 @@
     background-image: url("../../icons/facebook-white.svg");
 }
 
-.article-shares .social-container > a:nth-child(3) {
+.article-shares .social-container > a:nth-child(3) span {
     background-image: url("../../icons/linkedin-white.svg");
 }
 
