--- a/styles/styles.css
+++ b/styles/styles.css
@@ -295,20 +295,16 @@ body > main > div:nth-child(1) > div > h1 {
 
 main {
   display: grid;
-  grid-template-columns: auto 1fr 2.5fr auto; /* 4 columns: left-gutter, left-side, right-side, right-gutter */
-  margin: 6% auto 1% 12%;
+  grid-template-columns: auto 1.05fr 2.5fr auto;
+  width: 83%;
+  max-width: 1300px;
+  margin: 100px auto 1%;
 }
 
 main .section.aside-nav {
   grid-column: 2; /* the second column, the left side of the page */
   position: fixed;
   font-size: 18px;
-}
-
-@media (width > 991px) {
-  main .section.aside-nav {
-    left: 195px;
-  }
 }
 
 @media (width <= 991px) {
